--- a/eclipse-workspace/endtoenddemo/pom.xml
+++ b/eclipse-workspace/endtoenddemo/pom.xml
@@ -20,11 +20,11 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.11</version>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
 
   <build>
